--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -52,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:orientation="horizontal"
             android:layout_marginTop="20dp">
 
             <TextView
